--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 	<title></title>
 </head>
 <body>
-   <img src="portfolio1">
-   <img src="portfolio2">
-   <img src="portfolio3">
-   <img src="portfolio4">
-   <img src="portfolio5">
-   <img src="portfolio6">
-   <img src="portfolio7">
-   <img src="portfolio8">
-   <img src="portfolio9">
-   <img src="portfolio10">
-   <img src="portfolio11">
-   <img src="portfolio12">
-   <img src="portfolio13">
-   <img src="portfolio14">
-   <img src="portfolio15">
-   <img src="portfolio16">
-   <img src="portfolio17">
-   <img src="portfolio18">
-   <img src="portfolio19">
+   <img src="portfolio1.jpg">
+   <img src="portfolio2.jpg">
+   <img src="portfolio3.jpg">
+   <img src="portfolio4.jpg">
+   <img src="portfolio5.jpg">
+   <img src="portfolio6.jpg">
+   <img src="portfolio7.jpg">
+   <img src="portfolio8.jpg">
+   <img src="portfolio9.jpg">
+   <img src="portfolio10.jpg">
+   <img src="portfolio11.jpg">
+   <img src="portfolio12.jpg">
+   <img src="portfolio13.jpg">
+   <img src="portfolio14.jpg">
+   <img src="portfolio15.jpg">
+   <img src="portfolio16.jpg">
+   <img src="portfolio17.jpg">
+   <img src="portfolio18.jpg">
+   <img src="portfolio19.jpg">
    
 </body>
 </html>
