--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title></title>
 </head>
 <body>
-   <img src="portfolio1.jpg">
+   <img src="portfolio1.JPG">
    <img src="portfolio2.jpg">
    <img src="portfolio3.jpg">
    <img src="portfolio4.jpg">
