--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 </head>
 <body>
    <img src="portfolio1.JPG">
-   <img src="portfolio2.jpg">
-   <img src="portfolio3.jpg">
-   <img src="portfolio4.jpg">
-   <img src="portfolio5.jpg">
-   <img src="portfolio6.jpg">
-   <img src="portfolio7.jpg">
-   <img src="portfolio8.jpg">
-   <img src="portfolio9.jpg">
-   <img src="portfolio10.jpg">
-   <img src="portfolio11.jpg">
-   <img src="portfolio12.jpg">
-   <img src="portfolio13.jpg">
-   <img src="portfolio14.jpg">
-   <img src="portfolio15.jpg">
-   <img src="portfolio16.jpg">
-   <img src="portfolio17.jpg">
-   <img src="portfolio18.jpg">
-   <img src="portfolio19.jpg">
+   <img src="portfolio2.JPG">
+   <img src="portfolio3.JPG">
+   <img src="portfolio4.JPG">
+   <img src="portfolio5.JPG">
+   <img src="portfolio6.JPG">
+   <img src="portfolio7.JPG">
+   <img src="portfolio8.JPG">
+   <img src="portfolio9.JPG">
+   <img src="portfolio10.JPG">
+   <img src="portfolio11.JPG">
+   <img src="portfolio12.JPG">
+   <img src="portfolio13.JPG">
+   <img src="portfolio14.JPG">
+   <img src="portfolio15.JPG">
+   <img src="portfolio16.JPG">
+   <img src="portfolio17.JPG">
+   <img src="portfolio18.JPG">
+   <img src="portfolio19.JPG">
    
 </body>
 </html>
